<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImplicitIntents</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="logo">Logo</string>
	<string name="implicit_intents">Implicit Intents</string>
	<string name="editUrl">Enter Url</string>
	<string name="url">Url: </string>
	<string name="phone_number">Phone: </string>
	<string name="editPhone_number">Phone Number</string>
	<string name="launch">Launch</string>
	<string name="ring">Ring</string>
	<string name="close">Close</string>
	
</resources>
