<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.implicitintents.MainActivity" >
    
    <LinearLayout
        android:id="@+id/headerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <ImageView
	        android:id="@+id/logoImageView"
	        android:layout_width="50dp"
	        android:layout_height="30dp"
	        android:layout_marginTop="10dp"
	        android:contentDescription="@string/logo"
	        android:src="@drawable/sjsu_logo" />

	    <TextView
	        android:id="@+id/implicit_intentsTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="60dp"
	        android:layout_marginTop="15dp"	        
	        android:textColor="@color/white"
	        android:textSize="20sp" 
	        android:text="@string/implicit_intents" />
	    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/urlLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/urlTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/urlEditText"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editUrl"
            android:textColor="@color/white" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp" >

         <Button
             android:id="@+id/launchButton"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:text="@string/launch" />

     </LinearLayout>

    
	
     <LinearLayout
        android:id="@+id/phoneNumberLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >
        
        <TextView
        android:id="@+id/phoneNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/phone_number" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/white"
			android:hint="@string/editPhone_number" />
        

	</LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp" >         

         <Button
             android:id="@+id/ringButton"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="60dp"
             android:text="@string/ring" />

     </LinearLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="20dp" >         

         <Button
             android:id="@+id/closeButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/close" />

     </LinearLayout>

</LinearLayout>
